[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "datebuilder"
version = "0.1.0"
description = "Tree-based date filtering utilities"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Drew Hill" }
]

dependencies = [
  "bintrees"
]

[tool.setuptools]
packages = ["datebuilder"]