[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "date_builder"
version = "0.1.6"
description = "Tree-based date filtering utilities"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Drew Hill" }
]

dependencies = [
  "bintrees"
]

[tool.setuptools]
packages = ["date_builder"]